@@ -22,5 +22,5 @@
 EXTENSION_ID = 'iped-frontend'
 EXTENSION_NAME = 'IPED FrontEnd'
 EXTENSION_AUTHOR = 'Eduardo Aguiar'
-EXTENSION_VERSION = '1.19'
+EXTENSION_VERSION = '1.20'
 EXTENSION_DESCRIPTION = 'IPED Front End'
