@@ -12,19 +12,31 @@ cardholdername	fullname
 cardholdernamefield	fullname
 cnpj	cnpj
 contactemail	email
+contact-email-input	email
 cpf	cpf
+cpf_cnpj	cpf
+cpf_cnpj	cnpj
 cpfresponsavel	cpf
 email	email
 fiscal_document	cpf
+formCadastroUsuarioSenha:email	email
+formCadastroUsuarioSenha:emailConfirma	email
+form:cpf:input	cpf
+form:email:input	email
 fullname	fullname
+identifier	email
+input-email	email
 inscricao	cnpj
 invoice_fullname	fullname
 legal_document	cpf
+loginfmt	email
 prestador.inscricao	cnpj
 root_taxid	cpf
 taxid	cpf
 tomador.inscricao	cnpj
+txtTOAAEmail	email
 user	email
+user_login	email
 username	email
 user-mail	email
 vatcompanybr	cnpj
